--- a/templates/carbon_emissions.html
+++ b/templates/carbon_emissions.html
@@ -77,13 +77,13 @@
         <div class="col-lg-3">
             <h6>Fertilizer</h6>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="fertilizer" id="yes_f" value="yes_f" required>
+              <input class="form-check-input" type="radio" name="fertilizer" id="yes_f" value="yes" required>
               <label class="form-check-label" for="yes_f">
                   Yes
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="fertilizer" id="no_f" value="no_f"  checked>
+              <input class="form-check-input" type="radio" name="fertilizer" id="no_f" value="no"  checked>
               <label class="form-check-label" for="no_f">
                   No
               </label>
@@ -91,13 +91,13 @@
 
             <h6>Plant Propagation</h6>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="plant" id="yes_p" value="yes_p"required>
+              <input class="form-check-input" type="radio" name="plant" id="yes_p" value="yes"required>
               <label class="form-check-label" for="yes_p">
                   Yes
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="plant" id="no_p" value="no_p" checked>
+              <input class="form-check-input" type="radio" name="plant" id="no_p" value="no" checked>
               <label class="form-check-label" for="no_p">
                   No
               </label>
@@ -105,13 +105,13 @@
 
             <h6>Soil Management</h6>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="soil" id="yes_s" value = "yes_s" required>
+              <input class="form-check-input" type="radio" name="soil" id="yes_s" value = "yes" required>
               <label class="form-check-label" for="yes_s">
                   Yes
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="soil" id="no_s" value="no_s" checked>
+              <input class="form-check-input" type="radio" name="soil" id="no_s" value="no" checked>
               <label class="form-check-label" for="yes_s">
                   No
               </label>
@@ -119,13 +119,13 @@
 
             <h6>Postharvest cooling</h6>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="post" id="yes_po" value="yes_po" required>
+              <input class="form-check-input" type="radio" name="post" id="yes_po" value="yes" required>
               <label class="form-check-label" for="yes_po">
                   Yes
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="post" id="no_po" value="no_po" checked>
+              <input class="form-check-input" type="radio" name="post" id="no_po" value="no" checked>
               <label class="form-check-label" for="no_po">
                   No
               </label>
@@ -135,14 +135,14 @@
 
 
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="glasshouse" id="yes_green" value="yes_green" required>
+              <input class="form-check-input" type="radio" name="glasshouse" id="yes_green" value="yes" required>
               <label class="form-check-label" for="yes_green">
                   Yes
               </label>
             </div>
 
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="glasshouse" id="no_green" value="no_green" checked>
+              <input class="form-check-input" type="radio" name="glasshouse" id="no_green" value="no" checked>
               <label class="form-check-label" for="no_green">
                   No
               </label>
